--- a/pom.xml
+++ b/pom.xml
@@ -34,10 +34,7 @@
             <version>7.3.0</version>
         </dependency>
 
-<!--        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
-        </dependency>-->
+
 
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -64,7 +61,7 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-<!--        <dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
@@ -74,7 +71,7 @@
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
             <version>5.1.47</version>
-        </dependency>-->
+        </dependency>
     </dependencies>
 
     <build>
