--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,11 @@
 server:
   port: 9800
 
+spring:
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/clous?useSSL=false
+    password: 123456
+    username: root
+    driver-class-name: com.mysql.jdbc.Driver
 
 
